2010-05-13  Kai Tietz  <kai.tietz@onevision.com>

	Revert last check-in for getopt. Mingw.org's version
	is simply broken, so we stick to the NetBSD version.

2010-05-03  Kai Tietz  <kai.tietz@onevision.com>

	PR/2995926
	* misc/getopt.c: Replace by PD mingw.org version.
	
2010-05-02  Jonathan Yong  <jon_y@sourceforge.net>

	* misc/mb_wc_common.h (get_codepage): use ___lc_codepage_func
	instead of __lc_codepage to get codepage.

2010-04-21  Ozkan Sezer  <sezeroz@gmail.com>

	* libsrc/wspiapi/WspiapiLegacyGetAddrInfo.c: Fix strict aliasing
	violation warning by using a struct in_addr variable instead of a
	DWORD variable.

2010-04-20  Ozkan Sezer  <sezeroz@gmail.com>

	* misc/gettimeofday.c (FILETIME_1970): Change from 11644473600ull
	to 116444736000000000ull as in the mingw.org version, fixing the
	issue reported by Patrick Galbraith.
	(getntptimeofday): Use a union of unsigned long long and FILETIME
	instead of ULARGE_INTEGER, as in the mingw.org version, to fix the
	strict aliasing violations reported by -Wstrict-aliasing=2.

2010-04-17  Jonathan Yong  <jon_y@sourceforge.net>

	* misc/mbrtowc.c (__mbrtowc_cp): Add nonnull attribute.
	* misc/wcrtomb.c (wcrtomb): Use __UNUSED_PARAM instead of
	__attribute__ ((__unused__))
	(wcsrtombs): Likewise. Sync with mingw.org.
	* misc/wcstof.c: New.
	* misc/wcstold.c: Sync with mingw.org.
	* Makefile.am: Add misc/wcstof.c.
	* Makefile.in: Regenerated.

2010-04-14  Jonathan Yong  <jon_y@sourceforge.net>

	* lib64/kernel32.def (AcquireSRWLockExclusive): New.
	(AcquireSRWLockShared): Likewise.
	(InitializeConditionVariable): Likewise.
	(InitOnceBeginInitialize): Likewise.
	(InitOnceComplete): Likewise.
	(InitOnceExecuteOnce): Likewise.
	(InitializeSRWLock): Likewise.
	(ReleaseSRWLockExclusive): Likewise.
	(ReleaseSRWLockShared): Likewise.
	(SleepConditionVariableCS): Likewise.
	(TryAcquireSRWLockExclusive): Likewise.
	(TryAcquireSRWLockShared): Likewise.
	(WakeAllConditionVariable): Likewise.
	(WakeConditionVariable): Likewise.