@@ -7,7 +7,9 @@
 #ifndef UNICODE
 #define UNICODE
 #endif
-
+#ifndef _UNICODE
+#define _UNICODE
+#endif
 #define WPRFLAG 1
 
 #include "dll_argv.c"
